Implemented '/devices/credentials' endpoint
